<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout_main"
    android:nestedScrollingEnabled="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:id="@+id/button_main_join"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickJoinGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_game"
        android:id="@+id/button_main_host"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_main_join"
        android:onClick="onClickHostGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/button_main_settings"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_main_host"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button_main_host"
        android:onClick="onClickSettingsButton" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/server_ip_label"
        android:textStyle="bold"
        android:id="@+id/text_main_ip_label"
        android:onClick="onClickSettingsButton"
        android:layout_below="@+id/button_main_join"
        android:layout_toStartOf="@+id/text_main_player_default" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name_label"
        android:textStyle="bold"
        android:id="@+id/text_main_player_label"
        android:onClick="onClickSettingsButton"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_main_ip_label" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name_default"
        android:id="@+id/text_main_player_default"
        android:layout_below="@+id/text_main_player_label"
        android:layout_alignParentEnd="true"
        android:onClick="onClickSettingsButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/server_ip_default"
        android:id="@+id/text_main_ip_default"
        android:layout_below="@+id/text_main_ip_label"
        android:layout_alignEnd="@+id/text_main_player_default"
        android:onClick="onClickSettingsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/button_main_exit"
        android:layout_marginTop="50dp"
        android:onClick="onClickExitButton"
        android:layout_below="@+id/button_main_settings"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button_main_settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/connection_label"
        android:textStyle="bold"
        android:id="@+id/text_main_connection_label"
        android:onClick="onClickSettingsButton"
        android:layout_alignTop="@+id/button_main_host"
        android:layout_alignEnd="@+id/text_main_player_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/connection_default"
        android:id="@+id/text_main_connection_default"
        android:onClick="onClickSettingsButton"
        android:layout_below="@+id/text_main_connection_label"
        android:layout_alignEnd="@+id/text_main_player_default" />

</RelativeLayout>
