<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".menu.SettingsActivity"
    android:id="@+id/layout_settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name_label"
        android:textStyle="bold"
        android:id="@+id/text_settings_name_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/server_ip_label"
        android:textStyle="bold"
        android:id="@+id/text_settings_ip_label"
        android:layout_below="@+id/field_settings_player_name"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_settings_save"
        android:onClick="onClickSaveButton"
        android:layout_marginLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/text_settings_name_label"
        android:layout_marginBottom="114dp" />
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button_settings_cancel"
        android:onClick="onClickCancelButton"
        android:layout_alignTop="@+id/button_settings_save"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/field_settings_player_name"
        android:longClickable="false"
        android:linksClickable="false"
        android:layout_below="@+id/text_settings_name_label"
        android:layout_alignParentStart="true"
        android:hint="@string/player_name_default" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/field_settings_ip"
        android:longClickable="false"
        android:linksClickable="false"
        android:hint="@string/server_ip_default"
        android:layout_below="@+id/text_settings_ip_label"
        android:layout_alignParentStart="true" />

</RelativeLayout>
